# dataset-coreutils

./: .clang-format  .clang-tidy  .gitignore  README.md  arrow_result.h  bash_functions.cpp  cat.cpp  cut.cpp  eval.cpp  grep.cpp  head.cpp  meson.build  options.h  query.cpp  query.h  query_evaluator.cpp  query_evaluator.h  queryplan.h  serde.cpp  serde.h  sort.cpp  sql.cpp  writer.cpp  writer.h
src/: arrow_result.h  cat.cpp  cut.cpp  eval.cpp  grep.cpp  head.cpp  join.cpp  meson.build  options.h  query.cpp  query.h  query_evaluator.cpp  query_evaluator.h  queryplan.h  serde.cpp  serde.h  sort.cpp  sql.cpp  writer.cpp  writer.h
